k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-lab-deployment
  namespace: default
  labels:
    app: mail-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-lab
      type: backend
  template:
    metadata:
      labels:
        app: mail-lab
        type: backend
    spec:
      containers:
      - name: mail-lab
        image: fleynaro/web-mail-lab:backend-v0.3
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mail-lab-service
  namespace: default
spec:
  selector:
    app: mail-lab
    type: backend
  ports:
    - port: 8081
      targetPort: 8081
