k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-lab-front-deployment
  namespace: default
  labels:
    app: mail-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-lab
      type: frontend
  template:
    metadata:
      labels:
        app: mail-lab
        type: frontend
    spec:
      containers:
      - name: mail-lab
        image: fleynaro/web-mail-lab:frontend-spa-v1.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mail-lab-front-service
  namespace: default
spec:
  selector:
    app: mail-lab
    type: frontend
  ports:
    - port: 8080
      targetPort: 80
