k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
spec:
  rules:
  - host: fleynaro.mooo.com
    http:
      paths:
      - path: /labs/mail
        pathType: Prefix
        backend:
          service:
            name: mail-lab-back-service
            port:
              number: 8080
      - path: /labs/mail/spa
        pathType: Prefix
        backend:
          service:
            name: mail-lab-front-service
            port:
              number: 8080
